# TCadToGeo

./: .clang-format  CMakeLists.txt  readme.md
cmake/modules/: FindTetgen.cmake
examples/geometry/: tet.C  tet2.C
src/: TCadToGeo.cxx  TCadToGeo.h  TCadToGeoLinkDef.h  TGeoTet.cxx  TGeoTet.h
